2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Added splint annotations.
	* src/newgrp.c: audit_buf is only used in newgrp. Make it static.
	* src/newgrp.c: Ignore the return value of fputs().
	* src/newgrp.c: Use exit(EXIT_FAILURE) instead of exit(1).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/pwdcheck.c (passwd_check): The progname is not used.
	* libmisc/pwdcheck.c: Ignore the return value of sleep().
	* libmisc/pwdcheck.c: Use exit(EXIT_FAILURE) instead of exit(1).

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setupenv.c: Avoid assignments in comparisons.
	* libmisc/setupenv.c: Added brackets and parenthesis.
	* libmisc/setupenv.c: Ignore the return value of fclose (file
	opened read-only)
	* libmisc/setupenv.c: Ignore the return value of puts().
	* libmisc/setupenv.c: Avoid implicit conversion of pointers to
	booleans.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_gid.c, libmisc/find_new_uid.c,
	libmisc/isexpired.c, src/groupadd.c, lib/pwauth.h, lib/groupmem.c,
	lib/shadowmem.c, lib/pwmem.c, lib/prototypes.h: Added splint
	annotations.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/loginprompt.c: Use exit(EXIT_FAILURE) instead of
	exit(1).
	* libmisc/loginprompt.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/loginprompt.c: Ignore return value of putc().

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/env.c, libmisc/age.c: Added splint annotations.
	* libmisc/age.c: Added brackets and parenthesis.
	* libmisc/age.c: Ignore the return value of fclose (file opened
	read-only)
	* libmisc/age.c: Ignore puts() return value.
	* libmisc/age.c: Use exit(EXIT_FAILURE) instead of exit(1).
	* libmisc/age.c: Avoid assignments in comparisons.

2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
